analytics and debugging on mobile

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,10 @@
 {
+  "analytics": {
+    "recyclescan": {
+      "providerPlugin": "awscloudformation",
+      "service": "Pinpoint"
+    }
+  },
   "api": {
     "recyclescan": {
       "dependsOn": [
