download user images

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -91,5 +91,12 @@
         }
       ]
     }
+  },
+  "storage": {
+    "UserImages": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
   }
 }
